fixed results wrap z-index, added fix for overscroll behavior in firefox and safari

--- a/src/app/homepage_styles.module.css
+++ b/src/app/homepage_styles.module.css
@@ -24,7 +24,7 @@ background-color: #121212;
 height: 55px;
 position: sticky;
 box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-z-index: 99999999999999999;
+z-index: 99999999999999999999999999999999;
 top: 0;
 display: flex;
 flex-direction: row;
@@ -52,6 +52,7 @@ flex-direction: row;
 justify-content: center;
 align-items: center;
 padding-left: 40px;
+z-index: 99999999999999999999999999999999;
 } 
 
 .top_bar_frame_right {
@@ -216,7 +217,7 @@ background: rgba(255, 255, 255, 0.08);
 .results_wrap {
 display: flex;
 justify-content: center;
-
+z-index: 99999999999999;
 height: 70vh;
 position: absolute;
 width: calc(33% - 39px);
